# rust-logic-graph

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  USE_CASES.md
benches/: bench_cache.rs  comparison_dagrs.rs  full_bench.rs  grl_performance_check.rs  manual_csv_report.rs  memory_bench.rs  purchasing_flow_benchmark.rs
case_study/: .gitignore  Cargo.toml  FINAL_SUMMARY.md  GRPC.md  INDEX.txt  MICROSERVICES_DEPLOYMENT.md  MULTI_DATABASE_ARCHITECTURE.md  QUICKSTART_STANDALONE.md  README.md  STRUCTURE.md
case_study/.cargo/: config.toml
case_study/docs/: CASE_STUDY.md  CASE_STUDY_INDEX.md  COMPARISON.md  PRESENTATION.md  PURCHASING_FLOW_SUMMARY.md  QUICKSTART.md  README.md  purchasing_flow_README.md
case_study/microservices/: GRPC_IMPLEMENTATION.md  README.md  TESTING.md  TEST_DATA_SUMMARY.md  docker-compose.yml  run.sh
case_study/microservices/k8s/: namespace.yaml
case_study/microservices/k8s/configmaps/: db-config.yaml  service-urls.yaml
case_study/microservices/k8s/deployments/: inventory-deployment.yaml  mysql-deployment.yaml  oms-deployment.yaml  orchestrator-deployment.yaml  po-deployment.yaml  rule-engine-deployment.yaml  supplier-deployment.yaml  uom-deployment.yaml
case_study/microservices/k8s/secrets/: db-secret.yaml
case_study/microservices/k8s/services/: inventory-service.yaml  mysql-service.yaml  oms-service.yaml  orchestrator-service.yaml  po-service.yaml  rule-engine-service.yaml  supplier-service.yaml  uom-service.yaml
case_study/microservices/proto/: README.md  inventory.proto  oms.proto  po.proto  rule_engine.proto  supplier.proto  uom.proto
case_study/microservices/scripts/: build-all-services.sh  build-docker.sh  check-all-services.sh  kill-all-ports.sh  quick-test.sh  restart-rule-engine.sh  run-services-background.sh  run-services-interactive.sh  setup-and-test.sh  setup-test-data.sql  start-all-services.sh  status-services.sh  stop-all-services.sh  test-docker-flow.sh  test-purchasing-flow.sh
case_study/microservices/services/: README.md
case_study/microservices/services/inventory-service/: .env.example  Cargo.toml  Dockerfile  build.rs
case_study/microservices/services/inventory-service/src/: config.rs  grpc_handler.rs  main.rs  repository.rs  rest_handler.rs
case_study/microservices/services/oms-service/: .env.example  Cargo.toml  Dockerfile  build.rs
case_study/microservices/services/oms-service/src/: config.rs  grpc_handler.rs  main.rs  repository.rs  rest_handler.rs
case_study/microservices/services/orchestrator-service/: .env.example  Cargo.toml  Dockerfile  build.rs  purchasing_flow_graph.yaml
case_study/microservices/services/orchestrator-service/src/: graph_config.rs  graph_executor.rs  main.rs
case_study/microservices/services/po-service/: .env.example  Cargo.toml  Dockerfile  build.rs
case_study/microservices/services/po-service/src/: main.rs
case_study/microservices/services/rule-engine-service/: .env.example  Cargo.toml  Dockerfile  README.md  build.rs
case_study/microservices/services/rule-engine-service/rules/: purchasing_rules.grl
case_study/microservices/services/rule-engine-service/src/: action_executor.rs  main.rs
case_study/microservices/services/supplier-service/: .env.example  Cargo.toml  Dockerfile  build.rs
case_study/microservices/services/supplier-service/src/: config.rs  grpc_handler.rs  main.rs  repository.rs  rest_handler.rs
case_study/microservices/services/uom-service/: .env.example  Cargo.toml  Dockerfile  build.rs
case_study/microservices/services/uom-service/src/: config.rs  grpc_handler.rs  main.rs  repository.rs  rest_handler.rs
case_study/microservices/sql/: init_inventory_db.sql  init_oms_db.sql  init_supplier_db.sql  init_uom_db.sql
case_study/monolithic/: .env.example  Cargo.toml  ENV_CONFIGURATION.md  purchasing_flow_graph.yaml
case_study/monolithic/shared/models/: Cargo.toml
case_study/monolithic/shared/models/src/: lib.rs
case_study/monolithic/src/: config.rs  graph_config.rs  graph_executor.rs  main.rs  models.rs
case_study/monolithic/src/config/: config.rs  graph_config.rs  mod.rs
case_study/monolithic/src/executors/: db_executor.rs  graph_executor.rs  mod.rs
case_study/monolithic/src/handlers/: mod.rs  purchasing_flow.rs
case_study/monolithic/src/models/: mod.rs  purchase_order.rs  purchasing_context.rs
case_study/monolithic/src/nodes/: mod.rs
case_study/monolithic/src/nodes/db_node/: handler.rs  mod.rs  models.rs  parser.rs  types.rs
case_study/monolithic/src/nodes/rule_node/: evaluator.rs  handler.rs  mod.rs  models.rs
case_study/monolithic/src/services/: inventory.rs  mod.rs  oms.rs  rule_engine.rs  rule_service.rs  supplier.rs  uom.rs
case_study/monolithic/src/utils/: database.rs  metrics.rs  mod.rs
case_study/rules/: purchasing_rules.grl
case_study/scripts/: build-all.sh  build-docker-sequential.sh  cleanup-k8s.sh  deploy-k8s.sh  push-all.sh  run_advanced.sh  run_mock.sh  run_monolithic.sh  run_realdb.sh  setup_databases.sh  setup_multi_databases.sh  test-api.sh  test_purchasing_flow.sh
case_study/sql/: purchasing_flow_setup.sql  purchasing_flow_setup_postgres.sql  purchasing_flow_setup_single_db.sql
case_study/src/: purchasing_flow_advanced.rs  purchasing_flow_realdb.rs
docs/: BENCHMARKING.md  CACHE.md  CACHE_IMPLEMENTATION.md  COMPARISON_RESULTS.md  DB_PARAMS_IMPLEMENTATION.md  GRL.md  GRL_INTEGRATION_SUMMARY.md  GRL_PERFORMANCE_V0172.md  GRL_VERSION_COMPARISON_v0171_vs_v0172.md  KUBERNETES.md  README.md  v0.5.0_RELEASE_NOTES.md  v0.7.0_RELEASE_NOTES.md
examples/: DISTRIBUTED_CONTEXT.md  README.md  advanced_flow.json  advanced_flow.rs  advanced_flow.yaml  bench_load.rs  cache_flow.rs  circuit_breaker_flow.rs  conditional_flow.rs  cyclic_graph.json  cyclic_graph.yaml  db_params_flow.rs  db_params_graph.json  db_params_graph.yaml  discount_subgraph.yaml  distributed_context.rs  distributed_context_graph.yaml  ecommerce_saga.rs  error_handling_flow.rs  error_messages_demo.rs  failover_degradation.rs  grl_case_study_test.rs  grl_comprehensive_check.rs  (+27 more)
(+60 files in other folders)
