
[package]
name = "rust-logic-graph"
version = "0.1.0"
edition = "2021"
authors = ["James Vu <you@example.com>"]
description = "A modular reasoning graph framework for distributed logic orchestration"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = "0.6"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
dashmap = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
anyhow = "1"
rust-rule-engine = "0.10"
