
[package]
name = "rust-logic-graph"
version = "0.8.2"
edition = "2021"
authors = ["James Vu <you@example.com>"]
description = "A modular reasoning graph framework for distributed logic orchestration"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = "0.6"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
dashmap = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
anyhow = "1"
rust-rule-engine = "0.17"  # v0.17 with improved Expression Evaluation
clap = { version = "4", features = ["derive"] }
colored = "2"
parking_lot = "0.12"
once_cell = "1"
chrono = "0.4"

# Database integrations
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "mysql"], optional = true }
redis = { version = "0.24", features = ["tokio-comp"], optional = true }
mongodb = { version = "2.8", optional = true }

# AI/LLM integrations
reqwest = { version = "0.11", features = ["json", "stream"], optional = true }
futures = { version = "0.3", optional = true }

[features]
default = []
postgres = ["sqlx"]
mysql = ["sqlx"]
redis-cache = ["redis"]
mongodb-db = ["mongodb"]
openai = ["reqwest", "futures"]
claude = ["reqwest", "futures"]
ollama = ["reqwest", "futures"]
all-integrations = ["postgres", "mysql", "redis-cache", "mongodb-db", "openai", "claude", "ollama"]

[dev-dependencies]
criterion = { version = "0.5", features = ["async"] }
tempfile = "3"
dagrs = "0.5.0"
async-trait = "0.1"

[[bench]]
name = "comparison_dagrs"
harness = false
