[package]
name = "po-service"
version = "0.1.0"
edition = "2021"

[dependencies]
purchasing-models = { path = "../../shared/models" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
tonic = "0.11"
prost = "0.12"

[build-dependencies]
tonic-build = "0.11"
