[package]
name = "rule-engine-service"
version = "0.1.0"
edition = "2021"

[dependencies]
purchasing-models = { path = "../../shared/models" }
rust-logic-graph = { path = "../../../../" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
anyhow = "1"
parking_lot = "0.12"
tonic = "0.11"
prost = "0.12"

[build-dependencies]
tonic-build = "0.11"
